# Aether-Enclave

./: ARCHITECTURE.md  COMMERCIAL_PITCH.md  Cargo.toml  DEMO_VIDEO.md  EVALUATOR_TEST.md  IDEX_APPLICATION.md  IDEX_READY.md  IDEX_REVIEW.md  LIMITS.md  PILOT_TEST.md  README.md  ROADMAP.md  build.rs  link.x  payload.wat  rust-toolchain.toml
.cargo/: config.toml
aerospace_payload/: Cargo.toml
aerospace_payload/.cargo/: config.toml
aerospace_payload/src/: lib.rs
enclave_kernel/: Cargo.toml  build.rs  rust-toolchain.toml
enclave_kernel/.cargo/: config.esp32c3.toml  config.esp32c6.toml  config.toml
enclave_kernel/src/: interrupts.rs  lib.rs  main.rs  memory.rs  mmio.rs  proof.rs  runtime.rs  shutdown.rs  wasm_payload.rs
enclave_kernel/src/platform/: demo.rs  esp32c3.rs  esp32c6.rs  event_browser.rs  event_log.rs  font5x7.rs  mission_profile.rs  mod.rs  oled.rs  power_log.rs  radio.rs  radio_emit.rs  rtc_state.rs  sd_log.rs  uplink.rs
scripts/: wasm_imports.py
src/: interrupts.rs  lib.rs  main.rs  memory.rs  mmio.rs  runtime.rs  shutdown.rs  wasm_payload.rs
tools/: decrypt_uplink.py  sd_export.py  verify_log.py  write_mission_profile.py
