[package]
name = "enclave_kernel"
version = "0.1.0"
edition = "2021"
authors = ["AETHER-ENCLAVE Program"]
description = "Atmospheric-State Execution Module — radiation-resilient no_std unikernel WASM host"
license = "AGPL-3.0-or-later"
build = "build.rs"

[lib]
name = "enclave_kernel"
path = "src/lib.rs"

[[bin]]
name = "enclave_kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
wasmi = { version = "0.31", default-features = false }
wasmi_core = { version = "0.13", default-features = false }
spin = { version = "0.9", default-features = false, features = ["once", "mutex"] }
bitflags = { version = "2.6", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
static_cell = "2"

[package.metadata.bootimage]
run-command = [
    "C:\\Program Files\\qemu\\qemu-system-x86_64.exe",
    "-serial", "stdio",
    "-display", "none",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=4",
    "-drive", "format=raw,file={}",
]
